@@ -29,6 +29,8 @@
 19. Update MaterialIcons.ttf
 20. Replace some LMS icons in 'Radio' section with Material icons.
 21. Optionally enable some keyboard short-cuts.
+22. Remove 15 second play/pause timer, and play/pause icon changes, to media
+    session - looks like these were not required?
 
 1.0.2
 -----
